Correct a couple of manual button actions for the H100 remote.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22473 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/platform/remote-keymap-h100.tex
+++ b/manual/platform/remote-keymap-h100.tex
@@ -36,12 +36,12 @@
 \newcommand{\ActionRCWpsVolDown}{\ButtonRCVolDown}
 \newcommand{\ActionRCWpsVolUp}{\ButtonRCVolUp}
 \newcommand{\ActionRCWpsPitchScreen}{Long \ButtonRCOn}
-\newcommand{\ActionRCWpsQuickScreen}{Long \ButtonMode}
-\newcommand{\ActionRCWpsMenu}{\ButtonMode}
-\newcommand{\ActionRCWpsContext}{Long \ButtonSelect}
-\newcommand{\ActionRCWpsBrowse}{\ButtonSelect}
-\newcommand{\ActionRCWpsAbReset}{\ButtonOn{} + \ButtonSelect}
-\newcommand{\ActionRCWpsIdThreeScreen}{\ButtonOn{} + \ButtonMode}
+\newcommand{\ActionRCWpsQuickScreen}{Long \ButtonRCMode}
+\newcommand{\ActionRCWpsMenu}{\ButtonRCMode}
+\newcommand{\ActionRCWpsContext}{Long \ButtonRCSelect}
+\newcommand{\ActionRCWpsBrowse}{\ButtonRCSelect}
+\newcommand{\ActionRCWpsAbReset}{\ButtonRCOn{} + \ButtonRCSelect}
+\newcommand{\ActionRCWpsIdThreeScreen}{\ButtonRCOn{} + \ButtonRCMode}
  
 %Button actions, tree context
 \newcommand{\ActionRCTreeWps}{\ButtonRCOn}
@@ -72,7 +72,7 @@
 \newcommand{\ActionRCKbdDown}{\ButtonRCBitrate}
 
 %Button actions, Pitch Screen context
-\newcommand{\ActionRCPsToggleMode}{\ButtonMode}
+\newcommand{\ActionRCPsToggleMode}{\ButtonRCMode}
 \newcommand{\ActionRCPsIncSmall}{\ButtonRCFF}
 \newcommand{\ActionRCPsIncBig}{Long \ButtonRCFF}
 \newcommand{\ActionRCPsDecSmall}{\ButtonRCRew}
@@ -89,7 +89,7 @@
 \newcommand{\ActionRCRecSettingsDec}{\ButtonRCSource}
 \newcommand{\ActionRCRecPrev}{\ButtonRCRew}
 \newcommand{\ActionRCRecNext}{\ButtonRCFF}
-\newcommand{\ActionRCRecMenu}{\ButtonMode}
+\newcommand{\ActionRCRecMenu}{\ButtonRCMode}
 \newcommand{\ActionRCRecExit}{\ButtonRCStop}
 
 %Button actions, FM radio context
