Add remote keymappings to the Gigabeat F/X and Gigabeat S manuals.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22476 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/sound_settings.tex
+++ b/manual/configure_rockbox/sound_settings.tex
@@ -333,7 +333,7 @@ change to customise your listening experience.
       \opt{SANSA_E200_PAD}{\ButtonScrollBack}
       \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonRight}
     \opt{HAVEREMOTEKEYMAP}{& 
-      \opt{IRIVER_RC_H100_PAD}{\ButtonRCFF}
+      \opt{IRIVER_RC_H100_PAD,GIGABEAT_RC_PAD}{\ButtonRCFF}
         }
       & Raises the highlighted parameter.\\
       %
@@ -342,7 +342,7 @@ change to customise your listening experience.
       \opt{SANSA_E200_PAD}{\ButtonScrollFwd}
       \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonLeft}
     \opt{HAVEREMOTEKEYMAP}{& 
-      \opt{IRIVER_RC_H100_PAD}{\ButtonRCRew}
+      \opt{IRIVER_RC_H100_PAD,GIGABEAT_RC_PAD}{\ButtonRCRew}
         }
       & Lowers the highlighted parameter.\\
       %
@@ -350,18 +350,21 @@ change to customise your listening experience.
       \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD}{\ButtonLeft}
       \opt{SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonUp}
     \opt{HAVEREMOTEKEYMAP}{& }
+      \opt{GIGABEAT_RC_PAD}{\ButtonRCVolUp}
       & Moves to the previous EQ band. \\
       %
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD}{\ButtonRight}
       \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD}{\ButtonRight}
       \opt{SANSA_E200_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonDown}
     \opt{HAVEREMOTEKEYMAP}{& }
+      \opt{GIGABEAT_RC_PAD}{\ButtonRCVolDown}
       & Moves to the next EQ band. \\
       %
       \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonSelect}
       \opt{IAUDIO_X5_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_VIDEO_PAD,SANSA_E200_PAD}{\ButtonSelect}
     \opt{HAVEREMOTEKEYMAP}{&       
       \opt{IRIVER_RC_H100_PAD}{\ButtonRCSelect}
+      \opt{GIGABEAT_RC_PAD}{\ButtonRCPlay}
         }
       & Toggles the cursor among the three parameters (gain, center frequency,
       Q) for the selected EQ band.\\
@@ -373,6 +376,7 @@ change to customise your listening experience.
       \opt{GIGABEAT_PAD,GIGABEAT_S_PAD}{\ButtonPower}
     \opt{HAVEREMOTEKEYMAP}{& 
       \opt{IRIVER_RC_H100_PAD}{\ButtonRCStop}
+      \opt{GIGABEAT_RC_PAD}{\ButtonRCDsp}
         }
       & Exits the graphic EQ screen.\\
     \end{btnmap}
