--- a/manual/platform/gigabeats.tex
+++ b/manual/platform/gigabeats.tex
@@ -6,6 +6,8 @@
 \edef\UseOption{\UseOption,HAVE_DISK_STORAGE}
 \edef\UseOption{\UseOption,HAVE_CAR_ADAPTER_MODE}
 \edef\UseOption{\UseOption,gigabeat}
+\edef\UseOption{\UseOption,GIGABEAT_RC_PAD}
+\edef\UseOption{\UseOption,HAVEREMOTEKEYMAP}
 
 \newcommand{\playerman}{Toshiba}
 \newcommand{\playertype}{Gigabeat S Series}
@@ -23,3 +25,4 @@
 
 % link external keymap file
 \input{platform/keymap-gigabeats.tex}
+\input{platform/remote-keymap-gigabeat.tex}
