--- a/manual/platform/remote-keymap-gigabeat.tex
+++ b/manual/platform/remote-keymap-gigabeat.tex
@@ -22,8 +22,8 @@
 \newcommand{\ActionRCWpsPlay}{\ButtonRCPlay}
 \newcommand{\ActionRCWpsSkipNext}{\ButtonRCFF}
 \newcommand{\ActionRCWpsSkipPrev}{\ButtonRCRew}
-\newcommand{\ActionRCWpsSeekBack}{Long \ButtonRCFF}
-\newcommand{\ActionRCWpsSeekFwd}{Long \ButtonRCRew}
+\newcommand{\ActionRCWpsSeekBack}{Long \ButtonRCRew}
+\newcommand{\ActionRCWpsSeekFwd}{Long \ButtonRCFF}
 \newcommand{\ActionRCWpsAbSetBNextDir}{}
 \newcommand{\ActionRCWpsAbSetAPrevDir}{}
 \newcommand{\ActionRCWpsStop}{Long \ButtonRCPlay}
@@ -40,8 +40,8 @@
 %Button actions, tree context
 \newcommand{\ActionRCTreeWps}{\ButtonRCPlay}
 \newcommand{\ActionRCTreeStop}{Long \ButtonRCPlay}
-\newcommand{\ActionRCTreeEnter}{}
-\newcommand{\ActionRCTreeParentDirectory}{}
+\newcommand{\ActionRCTreeEnter}{\ButtonRCFF}
+\newcommand{\ActionRCTreeParentDirectory}{\ButtonRCRew}
 
 %Button actions, YesNo context
 \newcommand{\ActionRCYesNoAccept}{\ButtonRCPlay}
