--- a/manual/platform/gigabeatf.tex
+++ b/manual/platform/gigabeatf.tex
@@ -7,6 +7,8 @@
 \edef\UseOption{\UseOption,HAVE_CAR_ADAPTER_MODE}
 \edef\UseOption{\UseOption,HAVE_BUTTON_LIGHTS}
 \edef\UseOption{\UseOption,gigabeat}
+\edef\UseOption{\UseOption,GIGABEAT_RC_PAD}
+\edef\UseOption{\UseOption,HAVEREMOTEKEYMAP}
 
 \newcommand{\playerman}{Toshiba}
 \newcommand{\playertype}{Gigabeat F and X Series}
@@ -24,3 +26,4 @@
 
 % link external keymap file
 \input{platform/keymap-gigabeatf.tex}
+\input{platform/remote-keymap-gigabeat.tex}
