Call the oddly labelled button on the gigabeat remote "Menu" in the manual.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22480 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/platform/remote-keymap-gigabeat.tex
+++ b/manual/platform/remote-keymap-gigabeat.tex
@@ -3,7 +3,7 @@
 \newcommand{\ButtonRCVolUp}{\btnfnt{Volume Up}}
 \newcommand{\ButtonRCVolDown}{\btnfnt{Volume Down}}
 \newcommand{\ButtonRCPlay}{\btnfnt{Play}}
-\newcommand{\ButtonRCDsp}{\btnfnt{Speaker}}
+\newcommand{\ButtonRCDsp}{\btnfnt{Menu}}
 \newcommand{\ButtonRCHold}{\btnfnt{Hold}}
 
 %Button actions, standard context
