--- a/manual/plugins/pictureflow.tex
+++ b/manual/plugins/pictureflow.tex
@@ -29,26 +29,34 @@ aware:
           \opt{IRIVER_H10_PAD}{\ButtonScrollUp{} / \ButtonScrollDown}
              \opt{HAVEREMOTEKEYMAP}{& }
           & Scroll through albums / track list\\}
-
+           
         \nopt{scrollwheel,IRIVER_H10_PAD}{\ButtonLeft{} / \ButtonRight
-
-               \opt{HAVEREMOTEKEYMAP}{& }
+           \opt{HAVEREMOTEKEYMAP}{& 
+              \opt{GIGABEAT_RC_PAD}{\ButtonRCVolDown{} / \ButtonRCVolUp}
+           }
         & Scroll through albums\\}
 
         \nopt{scrollwheel,IRIVER_H10_PAD}{\ButtonUp{} / \ButtonDown
-             \opt{HAVEREMOTEKEYMAP}{& }
+           \opt{HAVEREMOTEKEYMAP}{&
+             \opt{GIGABEAT_RC_PAD}{\ButtonRCVolDown{} / \ButtonRCVolUp}
+           }
         & Scroll through track list\\}
 
         \opt{IRIVER_H10_PAD}{\ButtonRight}
         \opt{ONDIO_PAD}{\ButtonUp}
         \opt{RECORDER_PAD}{\ButtonOn}
         \nopt{ONDIO_PAD,IRIVER_H10_PAD,RECORDER_PAD}{\ButtonSelect}
-             \opt{HAVEREMOTEKEYMAP}{& }
-        & Enter track list \opt{swcodec}{/ Play album from selected
-          track}\\
+           \opt{HAVEREMOTEKEYMAP}{&
+             \opt{GIGABEAT_RC_PAD}{\ButtonRCFF}
+           }
+        & Enter track list 
+             \opt{swcodec}{/ Play album from selected track}
+        \\
 
         \ButtonLeft
-               \opt{HAVEREMOTEKEYMAP}{& }
+           \opt{HAVEREMOTEKEYMAP}{&
+             \opt{GIGABEAT_RC_PAD}{\ButtonRCRew}
+            }
         & Exit track list\\
 
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonMode}
@@ -59,7 +67,9 @@ aware:
         \opt{IRIVER_H10_PAD,SANSA_C200_PAD}{\ButtonPower}
         \opt{RECORDER_PAD}{\ButtonFOne}
         \opt{ONDIO_PAD}{Long \ButtonMenu}
-            \opt{HAVEREMOTEKEYMAP}{& }
+            \opt{HAVEREMOTEKEYMAP}{&
+              \opt{GIGABEAT_RC_PAD}{\ButtonRCDsp}
+            }
         & Enter menu\\
 
         \opt{IRIVER_H100_PAD,IRIVER_H300_PAD,RECORDER_PAD,ONDIO_PAD}{\ButtonOff}
@@ -67,7 +77,9 @@ aware:
              MROBE100_PAD}{\ButtonPower}
         \opt{SANSA_C200_PAD,IRIVER_H10_PAD}{Long \ButtonPower}
         \opt{IPOD_1G2G_PAD,IPOD_3G_PAD,IPOD_4G_PAD}{Long \ButtonMenu}
-           \opt{HAVEREMOTEKEYMAP}{& }
+           \opt{HAVEREMOTEKEYMAP}{&
+             \opt{GIGABEAT_RC_PAD}{\ButtonRCRew}
+           }
         & Exit PictureFlow\\
     \end{btnmap}
 \end{table}
