Fix typo in French translation (thanks to Clément Pit-Claudel).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22490 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -2233,7 +2233,7 @@
     *: "Sort Directories"
   </source>
   <dest>
-    *: "Tri des Répertoires"
+    *: "Tri des répertoires"
   </dest>
   <voice>
     *: "Tri des répertoires"
