I'm making a right mess of this - hopefully the original typo is now fixed without me introducing any more of my own...
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22493 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -8364,7 +8364,7 @@
     *: none
     recording: "Disque plein. Presser OFF pour continuer."
     h100,h120,h300: "Disque plein. Presser STOP pour continuer."
-    m5,x5: "Disque plein. presser POWER pour continuer."
+    m5,x5: "Disque plein. Presser POWER pour continuer."
     e200*,c200*: "Disque plein. Presser PREV pour continuer."
   </dest>
   <voice>
