--- a/manual/configure_rockbox/file_view.tex
+++ b/manual/configure_rockbox/file_view.tex
@@ -29,11 +29,12 @@ displays files.
   \newline\setting{As digits} disables this algorithm, and causes every digit to
   be compared separately. The following table demonstrates the two sortings.
   \begin{table}
-    \centering
-    \begin{tabularx}{.8\textwidth}{ll}
+  \begin{center}  
+  \rowcolors{1}{}{gray!30}
+    \begin{tabularx}{.8\textwidth}{XX}
     \toprule
       \textbf{As whole numbers} & \textbf{As digits}\\
-      \midrule
+      \midrule  
       03 Jackson.mp3 & 03 Jackson.mp3\\
       1 Ring Of Fire.mp3 & 1 Ring Of Fire.mp3\\
       2 I Walk The Line.mp3 & 10 A Thing Called Love.mp3\\
@@ -43,6 +44,7 @@ displays files.
       Episode 233.ogg & Episode 57.ogg\\
       \bottomrule
     \end{tabularx}
+  \end{center}
   \end{table}
 
   
