--- a/manual/configure_rockbox/sound_settings.tex
+++ b/manual/configure_rockbox/sound_settings.tex
@@ -81,6 +81,7 @@ change to customise your listening experience.
   %
   \begin{table}
   \begin{center}
+  \rowcolors{1}{}{gray!30}
   \begin{tabularx}{\textwidth}{lX}\toprule
       \textbf{Setting} & \textbf{Description} \\\midrule
         Stereo
@@ -198,6 +199,7 @@ change to customise your listening experience.
     %
     \begin{table}[h!]
       \begin{center}
+      \rowcolors{1}{}{gray!30}
         \begin{tabular}{@{}lc@{}}\toprule
           Setting & Value \\\midrule
           MDB Strength & 50dB \\
