--- a/manual/plugins/mandelbrot.tex
+++ b/manual/plugins/mandelbrot.tex
@@ -5,7 +5,7 @@ This demonstration draws fractal images from the Mandelbrot set
 \begin{table}
   \begin{btnmap}{}{}
     Direction keys
-    \opt{IRIVER_RC_H100_PAD}{&}
+    \opt{HAVEREMOTEKEYMAP}{&}
     & Move about the image\\
     %
     \opt{RECORDER_PAD,IRIVER_H10_PAD}{\ButtonPlay}
