--- a/manual/plugins/pacbox.tex
+++ b/manual/plugins/pacbox.tex
@@ -9,7 +9,9 @@ Pacbox is an emulator of the Pacman arcade machine hardware. It is a port of
 \subsubsection{ROMs}
 To use the emulator to play Pacman, you need a copy of ROMs for 
 ``Midway Pacman''.
+\begin{table}
 \begin{center}
+  \rowcolors{1}{}{gray!30}
   \begin{tabular}{ll}\toprule
     \textbf{Filename} & \textbf{MD5 checksum}\\\midrule
     pacman.5e & 2791455babaf26e0b396c78d2b45f8f6\\
@@ -20,6 +22,7 @@ To use the emulator to play Pacman, you need a copy of ROMs for
     pacman.6j & 33c0e197be4c787142af6c3be0d8f6b0\\\bottomrule
   \end{tabular}
 \end{center}
+\end{table}
 
 These need to be stored in the \fname{/.rockbox/pacman/} directory on your 
 \dap. In the MAME ROMs collection the necessary files can be found in 
