--- a/manual/appendix/config_file_options.tex
+++ b/manual/appendix/config_file_options.tex
@@ -6,9 +6,10 @@
 % for the html output.
 \ifpdfoutput{\newcommand{\localendhead}{\endhead}}%
     {\newcommand{\localendhead}{}}
+  \rowcolors{1}{}{gray!30}
   \begin{longtable}{@{}>{\raggedright}p{.35\textwidth}@{}>{\raggedright}p{.4\textwidth}@{}p{.25\textwidth}@{}}
     \toprule
-    \textbf{Setting} & \textbf{Allowed Values} & \textbf{Unit}\\
+    \rowcolor{white} \textbf{Setting} & \textbf{Allowed Values} & \textbf{Unit}\\
     \midrule\localendhead % endhead breaks with htlatex
     volume      & \opt{masd}{-78 to +18}%
                   \opt{masf}{-100 -to +12}%
