--- a/manual/plugins/blackjack.tex
+++ b/manual/plugins/blackjack.tex
@@ -46,7 +46,7 @@ visit\\
        \opt{HAVEREMOTEKEYMAP}{& }
         & Quit\\\hline
     \multicolumn{2}{c}{\textbf{In game}}\\\hline
-    \ButtonLeft{} / \ButtonRight{} /\\
+    \ButtonLeft{} / \ButtonRight{} /
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,IAUDIO_X5_PAD%
         ,GIGABEAT_PAD,GIGABEAT_S_PAD,MROBE100_PAD,SANSA_C200_PAD}
       {\ButtonUp{} / \ButtonDown}
