--- a/manual/plugins/brickmania.tex
+++ b/manual/plugins/brickmania.tex
@@ -9,6 +9,7 @@ effect, you must catch it with the paddle. Look out for the bad ones.\\
 \subsubsection{Special items}
 \begin{table}
     \begin{center}
+    \rowcolors{1}{}{gray!30}
     \begin{tabularx}{.75\textwidth}{clX}\toprule
     \textbf{Displayed} & \textbf{Name} & \textbf{Description}\\\midrule
     N & Normal & Returns paddle to normal.\\
