--- a/manual/plugins/clix.tex
+++ b/manual/plugins/clix.tex
@@ -7,7 +7,7 @@ The more blocks you remove per turn, the more points you get.
 
 \begin{table}
   \begin{btnmap}{}{}
-    \ButtonLeft/\ButtonRight/\\
+    \ButtonLeft/\ButtonRight/
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
       ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
       {\ButtonUp/\ButtonDown}
