--- a/manual/plugins/jewels.tex
+++ b/manual/plugins/jewels.tex
@@ -14,7 +14,7 @@ In the mode puzzle the aim of the game is to connect the puzzles, by skilful swa
 
 \begin{table}
   \begin{btnmap}{}{}
-    \ButtonLeft/\ButtonRight/\\
+    \ButtonLeft/\ButtonRight/
     \opt{RECORDER_PAD,ONDIO_PAD,IRIVER_H100_PAD,IRIVER_H300_PAD,SANSA_E200_PAD%
       ,SANSA_C200_PAD,GIGABEAT_PAD,MROBE100_PAD,IAUDIO_X5_PAD,GIGABEAT_S_PAD}
       {\ButtonUp/\ButtonDown}
