Fix FS#10556 so that we now include the wps tags for the hold switch and remote hold switch for other targets than the iriver h100 and h300, introduce a new feature for remote_button_hold
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22498 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/wps_tags.tex
+++ b/manual/appendix/wps_tags.tex
@@ -142,14 +142,27 @@ produce the information for the next file to be played.
   \end{tagmap}
 \end{table}
 }
-\opt{h100,h300}{
-\section{Hold Switches}
-\begin{table}
-  \begin{tagmap}{}{}
-    \config{\%mh} & ``h'' if the main unit hold switch is on\\
-    \config{\%mr} & ``r'' if the remote hold switch is on\\
-  \end{tagmap}
-\end{table}
+
+% this will not include the "remote hold switch" tag for targets lacking 
+% a main unit hold switch
+\opt{hold_button}{
+  \opt{remote_button_hold}{
+    \section{Hold Switches}
+    \begin{table}
+      \begin{tagmap}{}{}
+        \config{\%mh} & ``h'' if the main unit hold switch is on\\
+        \config{\%mr} & ``r'' if the remote hold switch is on\\
+      \end{tagmap}
+    \end{table}
+  }
+  \nopt{remote_button_hold}{
+    \section{Hold Switch}
+    \begin{table}
+      \begin{tagmap}{}{}
+        \config{\%mh} & ``h'' if the hold switch is on\\
+      \end{tagmap}
+    \end{table}
+  }
 }
 
 \section{Virtual LED}
