Introduce names for header and row color in the tables so that they are the same throughout the manual and can be changed easily
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22501 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/file_formats.tex
+++ b/manual/appendix/file_formats.tex
@@ -3,7 +3,7 @@
 \section{\label{ref:Supportedfileformats}Supported file formats}
 \begin{table}
 \begin{center}
-\rowcolors{1}{}{gray!30}
+\rowcolors{1}{}{tblrowbgcolor}
 \begin{tabularx}{\textwidth}{clp{7em}X}\toprule
 \textbf{Icon} & \textbf{File Type} & \textbf{Extension} 
   & \textbf{Action when selected} \\\midrule%
@@ -83,7 +83,7 @@
   \section{\label{ref:Supportedaudioformats}Supported audio formats}
   \begin{table}
   \begin{center}
-  \rowcolors{1}{}{gray!30}
+  \rowcolors{1}{}{tblrowbgcolor}
   \begin{tabularx}{\textwidth}{lp{6em}X}\toprule
   \textbf{Format} & \textbf{Extension} & \textbf{Notes} \\\midrule
     \multicolumn{2}{c}{\textbf{Lossy codecs}}\\
