--- a/manual/configure_rockbox/sound_settings.tex
+++ b/manual/configure_rockbox/sound_settings.tex
@@ -81,7 +81,7 @@ change to customise your listening experience.
   %
   \begin{table}
   \begin{center}
-  \rowcolors{1}{}{gray!30}
+  \rowcolors{1}{}{tblrowbgcolor}
   \begin{tabularx}{\textwidth}{lX}\toprule
       \textbf{Setting} & \textbf{Description} \\\midrule
         Stereo
@@ -199,7 +199,7 @@ change to customise your listening experience.
     %
     \begin{table}[h!]
       \begin{center}
-      \rowcolors{1}{}{gray!30}
+      \rowcolors{1}{}{tblrowbgcolor}
         \begin{tabular}{@{}lc@{}}\toprule
           Setting & Value \\\midrule
           MDB Strength & 50dB \\
