--- a/manual/plugins/goban.tex
+++ b/manual/plugins/goban.tex
@@ -35,7 +35,7 @@ these markers: \\
 
 \begin{table}
   \begin{center}
-  \rowcolors{1}{}{gray!30}
+  \rowcolors{1}{}{tblrowbgcolor}
     \begin{tabularx}{\textwidth}{lX}\toprule
       \textbf{Mark} & \textbf{Meaning} \\ \midrule
       \emph{+ } & There are nodes after the current node in the SGF tree. \\
