--- a/manual/plugins/pacbox.tex
+++ b/manual/plugins/pacbox.tex
@@ -11,7 +11,7 @@ To use the emulator to play Pacman, you need a copy of ROMs for
 ``Midway Pacman''.
 \begin{table}
 \begin{center}
-  \rowcolors{1}{}{gray!30}
+  \rowcolors{1}{}{tblrowbgcolor}
   \begin{tabular}{ll}\toprule
     \textbf{Filename} & \textbf{MD5 checksum}\\\midrule
     pacman.5e & 2791455babaf26e0b396c78d2b45f8f6\\
