--- a/manual/configure_rockbox/file_view.tex
+++ b/manual/configure_rockbox/file_view.tex
@@ -30,7 +30,7 @@ displays files.
   be compared separately. The following table demonstrates the two sortings.
   \begin{table}
   \begin{center}  
-  \rowcolors{1}{}{gray!30}
+  \rowcolors{1}{}{tblrowbgcolor}
     \begin{tabularx}{.8\textwidth}{XX}
     \toprule
       \textbf{As whole numbers} & \textbf{As digits}\\
