--- a/manual/preamble.tex
+++ b/manual/preamble.tex
@@ -60,6 +60,10 @@
 
 \newcommand{\fixme}[1]{\textbf{\textcolor{red}{#1}}}
 
+% Colors used to typeset table headers and alternating table rows
+\colorlet{tblhdrbgcolor}{gray!60} % Background color for headers
+\colorlet{tblrowbgcolor}{gray!30} % Background color for rows
+
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage{verbatim}
@@ -210,7 +214,7 @@
 % Note: you still need to enclose this with \begin{table} / \end{table}
 % Cheers for the usenet helping me building this up :)
 \newenvironment{tagmap}[2]{%
-\rowcolors{1}{}{gray!30}
+\rowcolors{1}{}{tblrowbgcolor}
   \expandafter\let\expandafter\SavedEndTab\csname endtabular*\endcsname
   \expandafter\renewcommand\expandafter*\csname endtabular*\endcsname{%
     \bottomrule
@@ -320,7 +324,7 @@
 % Main Unit Key  &  Remote Key  &  Description \\
 
 \newenvironment{btnmap}[2]{%
-  \rowcolors{1}{}{gray!30}
+  \rowcolors{1}{}{tblrowbgcolor}
   \expandafter\let\expandafter\SavedEndTab\csname endtabular*\endcsname
   \expandafter\renewcommand\expandafter*\csname endtabular*\endcsname{%
     \bottomrule
