--- a/manual/rockbox_interface/tagcache.tex
+++ b/manual/rockbox_interface/tagcache.tex
@@ -114,7 +114,7 @@ to RAM.}%
 
 \begin{table}
 \begin{center}
-\rowcolors{1}{}{gray!30}
+\rowcolors{1}{}{tblrowbgcolor}
   \begin{tabularx}{.75\textwidth}{XXX}%
   \toprule%
   \textbf{Tag}   & \textbf{Type}  & \textbf{Origin} \\
